--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ header p {
     .talking-point .content {
         padding: 40px;
         text-align: left;
+        width: 75%;
     }
 
     .talking-point:nth-child(even) .content {
